--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="C62-39-JhD">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="C62-39-JhD" customClass="FeedImageCell" customModule="Prototype" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44" width="414" height="580"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C62-39-JhD" id="7K3-Ld-Wgq">
@@ -106,6 +106,12 @@
                                         <constraint firstAttribute="trailingMargin" secondItem="urk-VD-mn7" secondAttribute="trailing" id="ssa-oD-kwU"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="D1y-4K-iSw" id="KHJ-PW-LRm"/>
+                                    <outlet property="feedImageView" destination="hvo-vc-Q8U" id="j9Y-S2-apL"/>
+                                    <outlet property="locationContainer" destination="CYr-MS-4zM" id="0b0-YF-YDf"/>
+                                    <outlet property="locationLabel" destination="Pbt-XY-uD0" id="WMM-Ea-bR9"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
